--- a/index.html
+++ b/index.html
@@ -13,6 +13,39 @@
     />
   </head>
   <body>
-    <h1>Hi</h1>
+    <div class="container">
+      <div class="row">
+        <div class="col-12">
+          <h1 class="text-center">Enter a number to win!</h1>
+          <div class="input-group input-group-lg">
+            <div class="input-group-prepend">
+              <span class="input-group-text" id="inputGroup-sizing-lg"
+                >Enter a number</span
+              >
+            </div>
+            <input
+              type="text"
+              class="form-control"
+              aria-label="Sizing example input"
+              aria-describedby="inputGroup-sizing-lg"
+            />
+          </div>
+        </div>
+      </div>
+      <div class="row mt-3">
+        <div class="col-12">
+          <button type="button" class="btn btn-primary btn-lg btn-block">
+            Large button
+          </button>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-12">
+          <div class="jumbotron">
+            <h1 class="display-4 text-center">Winner</h1>
+          </div>
+        </div>
+      </div>
+    </div>
   </body>
 </html>
