--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             class="btn btn-primary btn-lg btn-block"
             onclick="handleClick()"
           >
-            Large button
+            Submit
           </button>
         </div>
       </div>
